Kexi: Make <SELECT "a" + "b"> SQL queries work and fix <SELECT "a" || "b">

Summary:
- <SELECT "a" + "b"> parses in Kexi>=2.9.7 but results in invalid (boolean) type/value
- for convenience, if either argument is of text type, operator "+" is now assumed to be identical to operator ||
- also fix SELECT "a" || "b" for MySQL (using CONCAT() is needed)

https://phabricator.kde.org/T677
BUG:358636
FIXED-IN:2.9.11

Test Plan:
Try test queries from the project attached at https://bugs.kde.org/show_bug.cgi?id=358636.
Try other queries that use text columns instead of string constants.

Reviewers: piggz, wicik

Subscribers: Kexi-Devel-list

Projects: #kexi, #calligra:_3.0

Differential Revision: https://phabricator.kde.org/D867