kexi/kexidb/drivers/mysql/mysqldriver.cpp
@@ -2,7 +2,7 @@
 Copyright (C) 2002   Lucijan Busch <lucijan@gmx.at>
 Daniel Molkentin <molkentin@kde.org>
 Copyright (C) 2003   Joseph Wenninger<jowenn@kde.org>
-Copyright (C) 2003-2015 Jarosław Staniek <staniek@kde.org>
+Copyright (C) 2003-2016 Jarosław Staniek <staniek@kde.org>
 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU Library General Public
@@ -223,5 +223,10 @@ QString MySqlDriver::unicodeFunctionToString(KexiDB::NArgExpr *args,
     return QString::fromLatin1("ORD(CONVERT(%1 USING UTF16))").arg(args->arg(0)->toString(this, params));
 }
 
-#include "mysqldriver.moc"
+QString MySqlDriver::concatenateFunctionToString(KexiDB::BinaryExpr *args, QuerySchemaParameterValueListIterator* params) const
+{
+    return QString::fromLatin1("CONCAT(%1, %2)").arg(args->left()->toString(this, params))
+                                                .arg(args->right()->toString(this, params));
+}
 
+#include "mysqldriver.moc"
