kexi/kexidb/drivers/mysql/mysqldriver.h
@@ -2,7 +2,7 @@
 Copyright (C) 2002   Lucijan Busch <lucijan@gmx.at>
 Daniel Molkentin <molkentin@kde.org>
 Copyright (C) 2003   Joseph Wenninger<jowenn@kde.org>
-Copyright (C) 2003-2015 Jarosław Staniek <staniek@kde.org>
+Copyright (C) 2003-2016 Jarosław Staniek <staniek@kde.org>
 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU Library General Public
@@ -65,6 +65,11 @@ public:
     //! Uses ORD(CONVERT(X USING UTF16)).
     virtual QString unicodeFunctionToString(KexiDB::NArgExpr *args,
                                             QuerySchemaParameterValueListIterator* params) const;
+
+    //! Generates native (driver-specific) function call for concatenation of two strings.
+    //! Uses CONCAT().
+    virtual QString concatenateFunctionToString(KexiDB::BinaryExpr *args,
+                                                QuerySchemaParameterValueListIterator* params) const;
 
 protected:
     virtual QString drv_escapeIdentifier(const QString& str) const;
